[gd_scene load_steps=9 format=3 uid="uid://cvhcpuaolv2bl"]

[ext_resource type="Script" uid="uid://bih61pwshgh8f" path="res://scripts/filter_problem_screen.gd" id="1_chmxe"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="2_chmxe"]
[ext_resource type="PackedScene" uid="uid://dqbsyjm472g3s" path="res://components/header.tscn" id="2_o0vv1"]
[ext_resource type="PackedScene" uid="uid://dtcl56kq2beg1" path="res://components/nav_bar.tscn" id="5_gux4j"]

[sub_resource type="ButtonGroup" id="ButtonGroup_7d1r7"]

[sub_resource type="ButtonGroup" id="ButtonGroup_chmxe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6og1j"]
bg_color = Color(1, 0, 0.505882, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.295867, 0.295866, 0.295866, 0.6)
shadow_size = 10
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_txrv4"]
font_size = 50
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.243137)
shadow_offset = Vector2(3, 3)

[node name="FilterProblemScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chmxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header2" parent="VBoxContainer" instance=ExtResource("2_o0vv1")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/Control/MarginContainer"]
layout_mode = 2

[node name="Lista" type="VBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Wall" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_chmxe")
text = "Filter by wall"

[node name="OptionWall" type="OptionButton" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_chmxe")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LabelGradeSystem" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_chmxe")
text = "Filter by grade"

[node name="OptionGradeMin" type="OptionButton" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_chmxe")
button_group = SubResource("ButtonGroup_7d1r7")

[node name="Label" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_chmxe")
text = "to"

[node name="OptionGradeMax" type="OptionButton" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_chmxe")
button_group = SubResource("ButtonGroup_7d1r7")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Order" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_chmxe")
text = "Order by"

[node name="OptionOrder" type="OptionButton" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_chmxe")
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "-"
popup/item_0/id = 0
popup/item_1/text = "Name"
popup/item_1/id = 1
popup/item_2/text = "Grade"
popup/item_2/id = 2
popup/item_3/text = "Sends"
popup/item_3/id = 3

[node name="CheckBoxUp" type="CheckBox" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_chmxe")
button_pressed = true
button_group = SubResource("ButtonGroup_chmxe")
text = "⬆️"

[node name="CheckBoxDown" type="CheckBox" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_chmxe")
button_group = SubResource("ButtonGroup_chmxe")
text = "⬇️"

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Panel2" type="Panel" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PanelClear" type="Panel" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6og1j")

[node name="Clear" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer/CenterContainer/PanelClear"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -25.5
offset_right = 41.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Clear"
label_settings = SubResource("LabelSettings_txrv4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PanelFilter" type="Panel" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer2/CenterContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6og1j")

[node name="Filter" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer2/CenterContainer/PanelFilter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -25.5
offset_right = 41.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Filter"
label_settings = SubResource("LabelSettings_txrv4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LabelInfo" type="Label" parent="VBoxContainer/Control/MarginContainer/Scroll/Lista/CenterContainer"]
layout_mode = 2
theme = ExtResource("2_chmxe")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("5_gux4j")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3/CheckBoxUp" to="." method="_on_check_box_up_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer3/CheckBoxDown" to="." method="_on_check_box_down_pressed"]
[connection signal="gui_input" from="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer/CenterContainer/PanelClear" to="." method="_on_panel_clear_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Control/MarginContainer/Scroll/Lista/HBoxContainer7/Panel2/HBoxContainer/MarginContainer2/CenterContainer/PanelFilter" to="." method="_on_panel_filter_gui_input"]
